programs/local/chdb.h

// Opaque handle for query results.
// Internal data structure managed by chDB implementation.
// Users should only interact through API functions.
typedef struct chdb_result_
{
	void * internal_data;
} chdb_result;
// Connection handle wrapping database session state.
// Internal data structure managed by chDB implementation.
// Users should only interact through API functions.
typedef struct chdb_connection_
{
	void * internal_data;
} * chdb_connection;
/**
 * Creates a new chDB connection.
 *
 * The engine uses one storage path per process: multiple connections to that
 * same path may be open at once. Connecting with a different path requires
 * closing all existing connections first, which shuts the engine down and
 * boots a new one.
 *
 * Keep at least one connection open for as long as the host needs chDB. The
 * engine is meant to start once per process: repeatedly closing the last
 * connection and reconnecting puts it through a full shutdown and boot each
 * time, and doing that many times in one process is known to corrupt the
 * process allocator on macOS and abort -- either in the engine's own teardown
 * or at some unrelated allocation afterwards. A host that pools connections
 * should hold one outside the pool rather than let the pool empty and
 * reconnect on the next request: an idle timeout or a maximum-lifetime policy
 * that retires the last connection puts it on that path with no indication.
 *
 * Arguments naming a ClickHouse query-level setting (--<setting>=<value>,
 * e.g. --max_threads=4 or --output_format_json_quote_denormals=1) apply to
 * this connection only, exactly as if it had executed SET <setting> = <value>:
 * concurrent connections to the same path each keep their own settings.
 * An invalid value for a known setting fails the connection. Server-level
 * options (--path=..., --user_scripts_path=..., logging options, ...) are consumed by
 * the connection that boots the engine and ignored afterwards.
 *
 * @param argc Number of command-line arguments
 * @param argv Command-line arguments array (--path=<db_path> to specify database location)
 * @return Pointer to connection pointer, or NULL on failure
 * @note Default path is ":memory:" if not specified
 */
CHDB_EXPORT chdb_connection * chdb_connect(int argc, char ** argv);
/**
 * Closes an existing chDB connection and cleans up resources.
 * Thread-safe function that handles connection shutdown and cleanup.
 *
 * Closing the last open connection shuts the engine down. See chdb_connect()
 * for why a host should not do that until it is finished with chDB.
 *
 * @param conn Pointer to connection pointer to close
 */
 CHDB_EXPORT void chdb_close_conn(chdb_connection * conn);
/**
 * Executes a query on the given connection.
 * Thread-safe function that handles query execution in a separate thread.
 *
 * @param conn Connection to execute query on
 * @param query SQL query string to execute
 * @param format Output format string (e.g., "CSV", default format)
 * @return Query result structure containing output or error message
 * @note Returns error result if connection is invalid or closed
 */
CHDB_EXPORT chdb_result * chdb_query(chdb_connection conn, const char * query, const char * format);
/**
 * Executes a streaming query on the given connection.
 * @brief Initializes streaming query execution and returns result handle
 * @param conn Connection to execute query on
 * @param query SQL query string to execute
 * @param format Output format string (e.g. "CSV", default format)
 * @return Streaming result handle containing query state or error message
 * @note Returns error result if connection is invalid or closed
 */
CHDB_EXPORT chdb_result * chdb_stream_query(chdb_connection conn, const char * query, const char * format);
/**
 * Fetches next chunk of streaming results.
 * @brief Iterates through streaming query results
 * @param conn Active connection handle
 * @param result Streaming result handle from query_conn_streaming()
 * @return Materialized result chunk with data
 * @note Returns empty result when stream ends
 * @note Fetching past the natural end of the stream is safe and idempotent:
 *       every further call returns a fresh empty, non-error result. Fetching
 *       after chdb_stream_cancel_query() or after a mid-stream error still
 *       returns an error result.
 * @note Not thread-safe per connection: a connection runs one statement at a
 *       time, so fetches (and cancel) on a streaming handle must be serialized
 *       by the caller — do not fetch the same stream from multiple threads
 *       concurrently.
 */
CHDB_EXPORT chdb_result * chdb_stream_fetch_result(chdb_connection conn, chdb_result * result);
/**
 * Cancels ongoing streaming query.
 * @brief Aborts streaming query execution and cleans up resources
 * @param conn Active connection handle
 * @param result Streaming result handle to cancel
 */
CHDB_EXPORT void chdb_stream_cancel_query(chdb_connection conn, chdb_result * result);
/**
 * Destroys a query result and releases all associated resources
 * @param result The result handle to destroy
 */
CHDB_EXPORT void chdb_destroy_query_result(chdb_result * result);
/**
 * Gets pointer to the result data buffer
 * @param result The query result handle
 * @return Read-only pointer to the result data
 * @note NOT NUL-terminated. The buffer is exactly chdb_result_length() bytes and the byte
 *       after it belongs to no one -- printf("%s"), strlen() and strcpy() read out of bounds.
 *       Use the length: fwrite(chdb_result_buffer(r), 1, chdb_result_length(r), stdout).
 */
CHDB_EXPORT char * chdb_result_buffer(chdb_result * result);
/**
 * Gets the length of the result data
 * @param result The query result handle
 * @return Size of result data in bytes
 */
CHDB_EXPORT size_t chdb_result_length(chdb_result * result);
/**
 * Retrieves error message from query execution
 * @param result The query result handle
 * @return Null-terminated error description, NULL if no error
 */
CHDB_EXPORT const char * chdb_result_error(chdb_result * result);